--- a/templates/question.html
+++ b/templates/question.html
@@ -5,25 +5,19 @@
 
   <form action="/answer" method="POST">
 
-
     {% for choice in question_data.choices %}
       <!-- you should have one item like this for every choice -->
       <p>
         <input
             type="radio"
             name="answer"
-            value="value-goes-here">
+            value="{{ choice }}">
         {{ choice }}
       </p>
-    {% endfor %}
+      {% endfor %}
 
     <button>Continue</button>
   </form>
 
 {% endblock %}
 
-<!-- check what choices is -->
-<!-- for each item in choices list, make an input -->
-<!-- jinja loop -->
-
-<!-- value="data that persists]" -->
