--- a/templates/question.html
+++ b/templates/question.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
 
-  <h1>{{ question_data.question }}</h1>
+  <h1>{{ question.question }}</h1>
 
   <form action="/answer" method="POST">
 
-    {% for choice in question_data.choices %}
+    {% for choice in question.choices %}
       <!-- you should have one item like this for every choice -->
       <p>
         <input
